# rocm-playground

./: CMakeLists.txt  README.md
fundamentals/: CMakeLists.txt
fundamentals/01_vector_add/: CMakeLists.txt  vector_add.hip
fundamentals/02_reduction/: CMakeLists.txt  reduction.hip
include/rocm_common/: device_buffer.hpp  hip_util.hpp
scritps/: build.sh  setup.sh
